sumo/tests/sumo/extended/emitter/errors/routedist/missing_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: MSTriggeredSource emitter: No route id given.
Quitting (on error).
